force-app/main/default/objects/SWOT_Analysis__c/SWOT_Analysis__c.object-meta.xml
<CustomObject>
    <description>Used to track the strength, weaknesses, opportunities, and threats on a strategic account profile</description>
    <label>SWOT Analysis</label>
    <nameField>
        <displayFormat>A-{0000}</displayFormat>
        <label>SWOT Analysis #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SWOT Analysis</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>