force-app/main/default/objects/SWOT_Analysis__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <description>used to describe the details of the strengths, weaknesses, opportunities, or threats on a strategic account profile.</description>
    <label>Comments</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>