force-app/main/default/objects/SWOT_Analysis__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Opportunities</fullName>
            </value>
            <value>
                <fullName>Strengths</fullName>
            </value>
            <value>
                <fullName>Threats</fullName>
            </value>
            <value>
                <fullName>Weaknesses</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>